[gd_scene load_steps=5 format=3 uid="uid://cry7oh6vlte32"]

[ext_resource type="Script" path="res://Cards/CardBase.gd" id="1_6npnr"]
[ext_resource type="Texture2D" uid="uid://butr4jfxwadot" path="res://Assets/Cards/Testcard.png" id="2_hj433"]
[ext_resource type="Texture2D" uid="uid://ta4rb728i7xf" path="res://Assets/Cards/cardBack.png" id="3_xkasb"]
[ext_resource type="Texture2D" uid="uid://dyc1ohulopogl" path="res://Assets/Cards/hover.png" id="4_bsg6t"]

[node name="CardBase" type="MarginContainer"]
offset_right = 116.0
offset_bottom = 192.0
pivot_offset = Vector2(58, 96)
script = ExtResource("1_6npnr")

[node name="Card" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
texture = ExtResource("2_hj433")
centered = false

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.74902, 0.92549, 1)
text = "TESTCARD"

[node name="CardBack" type="Sprite2D" parent="."]
texture = ExtResource("3_xkasb")
centered = false

[node name="Focus" type="TextureButton" parent="."]
layout_mode = 2
texture_hover = ExtResource("4_bsg6t")

[connection signal="mouse_entered" from="Focus" to="." method="_on_focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_focus_mouse_exited"]
